<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_menu_pic5">

    <Button
        android:id="@+id/buttonToDeckBuilder"
        android:layout_width="130dp"
        android:layout_height="63dp"
        android:text="@string/deck_builder_home"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonToPacks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <Button
        android:id="@+id/buttonToPacks"
        android:layout_width="130dp"
        android:layout_height="63dp"
        android:text="@string/packs"
        app:layout_constraintTop_toBottomOf="@id/buttonToDeckBuilder"
        app:layout_constraintBottom_toTopOf="@id/buttonToMarketplace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/buttonToMarketplace"
        android:layout_width="130dp"
        android:layout_height="63dp"
        android:text="@string/marketplace"
        app:layout_constraintTop_toBottomOf="@id/buttonToPacks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/buttonToTrading"
        android:layout_width="130dp"
        android:layout_height="63dp"
        android:text="Trading"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonToMarketplace" />

    <Button
        android:id="@+id/buttonToTradeUp"
        android:layout_width="130dp"
        android:layout_height="63dp"
        android:text="Trade Up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonToTrading" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="100sp"
        android:textColor="#ee222222"
        android:text="COMBAT CRITTERS"
        app:layout_constraintBottom_toTopOf="@+id/buttonToDeckBuilder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/eroded"/>

</androidx.constraintlayout.widget.ConstraintLayout>
