<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/woodgrain_backdrop">

    <LinearLayout
        android:id="@+id/cardsLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        >

        <GridView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cardsGridView"
            android:numColumns="5"
            android:gravity="center">

        </GridView>

    </LinearLayout>

    <Button
        android:id="@+id/button_backToDeckBuilder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/cardsLinearLayout"
        android:layout_marginBottom="40dp"
        android:text="@string/collect_cards2" />
</RelativeLayout>
