...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />

    <Button
        android:id="@+id/button_mainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Main Menu"
        app:layout_constraintBottom_toTopOf="@+id/navBarGuideline"
        app:layout_constraintStart_toStartOf="parent"
...
